refactor transport configuration